src/test/deca/context/invalid/created/binary_exp/op_bool/and_true_null.deca
// Description :
//    test and entre un true et un null
//
// Resultats :
//		Erreur contextuelle
//    	Ligne 12: (3.33) Type gauche true. Type droit null Type attendu: ‘boolean’
class A{}
{
boolean c = true && null;
}
